--- a/layer_1_bitwise/Cargo.toml
+++ b/layer_1_bitwise/Cargo.toml
@@ -7,3 +7,4 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+layer_0_ascii85 = { path = "../layer_0_ascii85" }
